# aatp

./: AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.audit/mutation-analysis/: coverage-report.txt
.audit/verification-proofs/: build-guarantees.txt  fuzz-and-corruption.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: codec.rs  dict.rs  lib.rs  message.rs  shadow.rs  state.rs
tests/: fuzz.rs
