[package]
name = "aatp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A tiny, zero-dependency, memory-safe binary transport for AI agents: framing with CRC32C integrity, zero-copy decode, a stateful session machine, dictionary compression, and a reversible obfuscation layer. #![forbid(unsafe_code)], no_std."
license = "MIT"
readme = "README.md"
repository = "https://github.com/MerlijnW70/aatp"
documentation = "https://docs.rs/aatp"
keywords = ["protocol", "serialization", "no_std", "binary", "agents"]
categories = ["encoding", "no-std", "network-programming"]

# Zero dependencies — by design.
[dependencies]
